add bottom popup modal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
   overlay_support: ^0.1.0
+  reorderables: ^0.2.9
   component_icons:
     git:
       url: https://github.com/Renoldi/component_icon.git
-
+  groovin_widgets:
+    git:
+      url: https://github.com/nandanghermawan21/GroovinWidgets.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
