--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,15 @@ dependencies:
     git:
       url: https://github.com/Renoldi/component_icon.git
       
-  groovin_widgets:
-    git:
-      url: https://github.com/nandanghermawan21/GroovinWidgets.git
+  # groovin_widgets:
+  #   git:
+  #     url: https://github.com/nandanghermawan21/GroovinWidgets.git
   flutter_google_places:
     git:
       url: https://github.com/nandanghermawan21/flutter_google_places.git
   google_maps_flutter: ^0.5.11+1
   location: ^2.3.5
-  geolocator: ^4.0.3
+  geolocator: ^5.1.4+1
   datetime_picker_formfield: ^0.1.8
  
 
