--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-  flutter_svg: ^0.14.3
   component_icons:
     git:
       url: https://github.com/Renoldi/component_icon.git
@@ -19,11 +17,10 @@ dependencies:
   flutter_google_places:
     git:
       url: https://github.com/nandanghermawan21/flutter_google_places.git
-  google_maps_flutter: ^0.5.21+8
+  flutter_svg: ^0.15.0
+  google_maps_flutter: ^0.5.21+12
   location: ^2.3.5
-  geolocator: ^5.1.4+2
-  datetime_picker_formfield: ^0.1.8
-  provider: ^3.1.0+1
+  geolocator: ^5.1.5 
 
 dev_dependencies:
   flutter_test:
