--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter_google_places:
     git:
       url: https://github.com/nandanghermawan21/flutter_google_places.git
-  flutter_svg: ^0.18.1
+  flutter_svg: 0.19.3 //^0.18.1
   google_maps_flutter: ^0.5.21+15
   location: ^2.3.5
   geolocator: ^5.2.1
